--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,9 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
+    <java.version>15</java.version>
+    <maven.compiler.source>15</maven.compiler.source>
+    <maven.compiler.target>15</maven.compiler.target>
 
     <spring-version>5.3.3</spring-version>
     <spring-security-version>5.4.4</spring-security-version>
@@ -178,6 +179,8 @@
         <configuration>
           <source>15</source>
           <target>15</target>
+          <fork>true</fork>
+          <executable>/usr/lib/jvm/jdk-15.0.2/bin/javac</executable> <!--PATH TO JAVAC -->
         </configuration>
       </plugin>
     </plugins>
