--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,8 @@
     <hiberante-version>5.4.29.Final</hiberante-version>
 
     <java-jwt-version>3.13.0</java-jwt-version>
+
+    <mockito-core-version>3.8.0</mockito-core-version>
   </properties>
 
   <dependencies>
@@ -96,6 +98,24 @@
       <groupId>org.hamcrest</groupId>
       <artifactId>java-hamcrest</artifactId>
       <version>2.0.0.0</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-test</artifactId>
+      <version>5.3.5</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>${mockito-core-version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-junit-jupiter</artifactId>
+      <version>${mockito-core-version}</version>
       <scope>test</scope>
     </dependency>
 
