- refactored validation chain;

--- a/src/main/resources/properties/validation/validQuestion.properties
+++ b/src/main/resources/properties/validation/validQuestion.properties
@@ -1,3 +1,8 @@
-question.tags.length.min = 1
+question.tags.count.min = 1
+question.tags.count.max = 7
+question.tag.length.min = 2
+question.tag.length.max = 20
+question.title.length.min = 10
+question.title.length.max = 50
 question.text.length.max = 2000
 question.text.length.min = 50
