- added regex validator - added question service with rest controller: -- create question

--- a/src/main/resources/properties/validation/validUser.properties
+++ b/src/main/resources/properties/validation/validUser.properties
@@ -1,4 +1,5 @@
 user.username.length.max = 30
 user.username.length.min = 2
+user.username.regexp = ^(?![_.])(?!.*[_.]{2})[a-zA-Z0-9._]+(?<![_.])$
 user.about.length.max = 1024
 user.about.length.min = 1
