--- a/src/main/resources/properties/validation/validQuestion.properties
+++ b/src/main/resources/properties/validation/validQuestion.properties
@@ -2,7 +2,9 @@ question.tags.count.min = 1
 question.tags.count.max = 7
 question.tag.length.min = 2
 question.tag.length.max = 20
+question.tag.regexp = ^(?![_.\\- ])(?!.*[_.-]{2})[a-zA-Z0-9._\\-]+(?<![_.\\- ])$
 question.title.length.min = 10
 question.title.length.max = 50
+question.title.regexp = ^(?![_.\\- ()])(?!.*[_.-]{2})[a-zA-Z0-9а-я._\\-() ]+(?<![_.\\- ()])$
 question.text.length.max = 2000
 question.text.length.min = 50
