--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
     <java-jwt-version>3.13.0</java-jwt-version>
 
     <mockito-core-version>3.8.0</mockito-core-version>
+    <rest-assured-version>4.3.3</rest-assured-version>
   </properties>
 
   <dependencies>
@@ -117,6 +118,17 @@
       <artifactId>mockito-junit-jupiter</artifactId>
       <version>${mockito-core-version}</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.rest-assured</groupId>
+      <artifactId>rest-assured</artifactId>
+      <version>${rest-assured-version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20210307</version>
     </dependency>
 
     <dependency>
