--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,11 @@
       <version>${java-jwt-version}</version>
     </dependency>
     <dependency>
+      <groupId>org.jasypt</groupId>
+      <artifactId>jasypt</artifactId>
+      <version>1.9.3</version>
+    </dependency>
+    <dependency>
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-core</artifactId>
       <version>${spring-security-version}</version>
