--- a/pom.xml
+++ b/pom.xml
@@ -172,6 +172,11 @@
       <artifactId>log4j-core</artifactId>
       <version>2.14.1</version>
     </dependency>
+    <dependency>
+      <groupId>com.jamonapi</groupId>
+      <artifactId>jamon</artifactId>
+      <version>2.82</version>
+    </dependency>
   </dependencies>
 
   <build>
