changes: - added: rest get full question - small code fixes;

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -5,7 +5,7 @@ appenders = console, file
 appender.console.type = Console
 appender.console.name = STDOUT
 appender.console.layout.type = PatternLayout
-appender.console.layout.pattern = %highlight{[%d{HH-mm-ss-SSSS}] [%p] [%logger{36}.%M()] - %msg%n}{FATAL=red, ERROR=red Bright, WARN=yellow Bright, INFO=blue, DEBUG=green bold, TRACE=blue}"
+appender.console.layout.pattern = %highlight{[%d{HH-mm-ss-SSSS}] [%p] [%logger{36}.%M()] - %msg%n}{FATAL=red, ERROR=red Bright, WARN=yellow Bright, INFO=blue, DEBUG=green bold, TRACE=blue}
 
 appender.file.type = File
 appender.file.name = LOGFILE
