changes: - refactored & optimized tests: -- apache.Logger replaced with custom logger (emphasis on performance) -- added tree logger (draws tree logs)

--- a/src/test/resources/log4j2.properties
+++ b/src/test/resources/log4j2.properties
@@ -7,10 +7,10 @@ appender.console.layout.type = PatternLayout
 appender.console.layout.pattern = %highlight{[%d{HH-mm-ss-SSSS}] [%p] [%logger{36}.%M()] - %msg%n}{INFO=blue, TRACE=white normal}
 
 logger.app.name = qa
-logger.app.level = trace
+logger.app.level = off
 logger.app.additivity = false
 logger.app.appenderRef.rolling.ref = STDOUT
 
-rootLogger.level = warn
+rootLogger.level = off
 rootLogger.appenderRefs = stdout
 rootLogger.appenderRef.stdout.ref = STDOUT
