added redis configuration; upgraded spring version 5.3.3 -> 5.3.4

--- a/src/main/resources/properties/password.properties
+++ b/src/main/resources/properties/password.properties
@@ -1,1 +1,2 @@
-password.path = /disk/main/forProjects/qa/passwordEncoderConfig/password.pass
+encoder.password.path = /disk/main/forProjects/qa/passwordEncoderConfig/password.pass
+redis.password.path = /disk/main/forProjects/qa/redis/password.pass
